2022-01-28  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_trimmer): Restart the pass
	on creation of new AST node.
	* testsuite/poke.pkl/arrays-17.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2022-01-28  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-trans.c (pkl_trans2_ps_op_attr):
	s/assert/PKL_PASS_DONE/.
	* testsuite/poke.pkl/typeof-25.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2022-01-27  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm.h (PVM_EXCEPTIONS): New macro.
	* libpoke/pvm.jitter (wrapped-globals): Add `pvm_exception_names`.
	(PVM_RAISE_DFL): Use `pvm_exception_names` instead of string
	literals.
	(late-c): Define `pvm_exception_names`.

2022-01-27  Jose E. Marchesi  <jemarch@gnu.org>

	* NEWS: Set date and version for 2.0 news.
	* configure.ac: Change version number to 2.0.
	* doc/gendocs_template: Adapt to 2.0.

2022-01-27  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm.jitter (iogetb): Mark as `non-relocatable` because
	of / and %.
	(formati): Likewise.
	(formatiu): Likewise.
	(formatl): Likewise.
	(formatlu): Likewise.
	(divi): Likewise.
	(diviu): Likewise.
	(divl): Likewise.
	(divlu): Likewise.
	(modi): Likewise.
	(modiu): Likewise.
	(modl): Likewise.
	(modlu): Likewise.
	* etc/pvm-wraps-static-whitelist: Update.

2022-01-27  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm.jitter (wrapped-functions): Add missing functions.
	(wrapped-globals): Add `libpoke_term_if`.
	(PVM_FORMATI): s/assert/pvm_assert/.
	(PVM_FORMATL): Likewise.
	(late-c): Define new function wrappers.
	(exit): s/assert/pvm_assert/.
	(call): Likewise.
	(eqs): s/STREQ/pvm_strcmp/.
	(nes): s/STRNEQ/pvm_strcmp/.
	(lts): s/strcmp/pvm_strcmp/.
	(gts): Likewise.
	(ges): Likewise.
	(les): Likewise.
	(sconc): s/${F}/pvm_${F}/.
	(strset): Likewise.
	(muls): Likewise.
	(asettb): Likewise.
	(strace): s/assert/pvm_assert/.
	(sleep): s/nanosleep/pvm_nanosleep/.